2001-12-19  Seth Nickell  <snickell@stanford.edu>

	* Makefile.am:
	* gnomecc.desktop.in:

	Install into $datadir/applications and add a Categories
	field to the .desktop file.

2001-12-18  Bradford Hovinen  <hovinen@ximian.com>

	* preferences.c (gnomecc_preferences_load): Use GConf
	(gnomecc_preferences_save): Ditto

2001-12-17  Bradford Hovinen  <hovinen@ximian.com>

	* capplet-dir-view.c (capplet_dir_view_init): Move most of the
	initialization stuff from capplet_dir_view_new to here

	* capplet-dir-view.[ch]: Port to GObject

	* main.c (main): Remove support for launching capplets
	(real_launch_control): Remove

	* capplet-dir.c: Remove bonobo capplet utility functions
	(capplet_activate): Don't use capplet_control_launch

2001-12-13  Richard Hestilow  <hestilow@ximian.com>
	
	* capplet-dir-view-list.c: Remove all g_print statements.
	(header_expose_cb): Fix pixbuf clipping.
	
	* capplet-dir-view.c (capplet_dir_view_new):
	s/gtk_object_unref/g_object_unref.

	* main.c (main): s/bonobo_main/gtk_main.

2001-12-08  Havoc Pennington  <hp@pobox.com>

	* capplet-dir-view.c: remove unused include that broke stuff

	* capplet-dir.c (capplet_activate): fix args to
	gnome_desktop_item_launch

2001-12-08  Richard Hestilow  <hestilow@ximian.com>

	* capplet-dir-view-list.c (list_populate): Fix call to
	gnome_icon_list_insert.
	(list_create): Update call to gnome_icon_list_new, and use
	a GtkHPaned instead of a GtkHBox.
	
2001-11-28  Richard Hestilow  <hestilow@ximian.com>

	* capplet-dir-view.c (help_cb): Update call to gnome_help_display.

2001-11-26  Richard Hestilow  <hestilow@ximian.com>

	* Initial port to GNOME2, removal of gtkhtml deps.
	
2001-10-26  Bradford Hovinen  <hovinen@ximian.com>

	* main.c: Remove #ifdef HAVE_BONOBO instances

	* capplet-dir.c: Remove #idef HAVE_BONOBO instances

2001-10-16  Jakub Steiner <jimmac@ximian.com>

	* control-center.png: usability@ thinks using hands is offensive.
	  This is a temporary icon
	