@@ -1,3 +1,15 @@
+2001-12-20  Bradford Hovinen  <hovinen@ximian.com>
+
+	* capplet-dir-view-list.c: Eliminate compiler warnings
+
+	* preferences.c: Eliminate compiler warnings
+
+	* capplet-dir-view.c: Eliminate compiler warnings
+
+	* capplet-dir.c: Eliminate compiler warnings
+
+	* main.c: Eliminate compiler warnings
+
 2001-12-19  Seth Nickell  <snickell@stanford.edu>
 
 	* Makefile.am:
